# raycoon

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md
.github/ISSUE_TEMPLATE/: issue.md
bindings/: README.md
bindings/python/: raycoon.py  tests.py
examples/: basic.rs
examples/basic/: game.rs  main.rs  map.rs
src/: lib.rs
src/engine/: columns.rs  core.rs  map.rs  mod.rs  player.rs  projection.rs  raycast.rs  screen.rs  types.rs
src/ffi/: cast.rs  core.rs  engine.rs  hit.rs  map.rs  mod.rs  player.rs  raycast.rs  tiles.rs  types.rs
src/render/: color.rs  mod.rs
src/render/backends/: mod.rs
src/render/backends/macroquad/: mod.rs  sky_ground.rs  wall_column.rs
tests/: mod.rs
tests/ffi/: engine_cast.rs  engine_update.rs  interface_guards.rs  map_and_tiles.rs  shared.rs
