[package]
name = "raycoon"
version = "0.0.3"
edition = "2021"
description = "Minimal 2.5D raycasting engine"
license = "MIT"
readme = "README.md"
repository = "https://github.com/valmnt/raycoon"
documentation = "https://github.com/valmnt/raycoon"
keywords = ["raycasting", "graphics", "engine", "2d"]
categories = ["graphics", "game-engines", "rendering"]
exclude = [
    "assets/**",
    "examples/**",
    "target/**",
    "tests/**",
    "scripts/**",
    ".vscode/**",
    ".github/**",
    ".git/**"
]

[lib]
name = "raycoon"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
glam = "0.30.9"

[dev-dependencies]
macroquad = "0.4.14"
